Changes to CSS to align lists, change list fonts. Fixed spelling issues.

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -17,8 +17,8 @@
 	section.blog-content figure .post-date{ padding-top:20px; height:100px; width:100px}
 	article.contact-header[role="pge-title-content"] p a{padding-right:10px}
 	.contat-from-wrapper{ margin-top:10px; padding:0 15px}
-	.grid-lod li{ width:100% !important; position:static !important; display:inline-block}
-	.grid-lod li img{ width:100%}
+	/*.grid-lod li{ width:100% !important; position:static !important; display:inline-block}
+	.grid-lod li img{ width:100%}*/
 	.work-details,.blog-details{ padding:0; margin-top:0}
 	.comments-reply li section{ width:88%}
 }
@@ -47,9 +47,9 @@
 	.contat-from-wrapper textarea{ margin-top:0}
 	.work-details,.blog-details{ padding:0; margin-top:0}
 	.work-images{ margin-top:0}
-	.work-images li{ margin-bottom:0; width:100%}
+	/*.work-images li{ margin-bottom:0; width:100%}
 	.work-images li figcaption h2{ font-size:18px;}
-	.grid-lod li{ width:100% !important; position:static !important}
+	.grid-lod li{ width:100% !important; position:static !important}*/
 	.bog-header h3, .comments-pan h3, .commentys-form h4{ padding-bottom:0}
 	.bog-header h2{ font-size:18px; line-height:26px}
 	.bog-header{ padding-bottom:20px}
@@ -61,5 +61,5 @@
 	.reply-pan{ margin-left:20px}
 	.commentys-form input[type="text"], .commentys-form input[type="email"], .commentys-form input[type="url"], .commentys-form textarea{ margin-bottom:20px}
 	.commentys-form textarea{ margin-top:0; margin-bottom:0}
-	
+
 }
