--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@
 
 /* @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic);
  */
- <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"> 
+ <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
 html {
 
@@ -36,6 +36,9 @@ html {
 	box-sizing: border-box;
 
 }
+
+
+
 
 
 input, textarea {
@@ -85,6 +88,9 @@ html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pr
 	border: 0;
 
 	outline: 0;
+
+  list-style-position: inside;
+
 
 }
 
@@ -160,7 +166,7 @@ header[role="header"] nav{ padding-top:10px;transition-delay: 0s;
 
 transition-duration: 0.6s;transition-property: all;transition-timing-function: ease;}
 
-header[role="header"] nav ul{ display:none; position: fixed; z-index:9999; text-align:center; width:100%; height:100%; top:0; left:0; right:0; background-color:rgba(255,255,255,0.8); padding:0; margin:0; padding-top:199px;}
+header[role="header"] nav ul{ display:none; position: fixed; z-index:8888; text-align:center; width:100%; height:100%; top:0; left:0; right:0; background-color:rgba(255,255,255,0.8); padding:0; margin:0; padding-top:199px;}
 
 header[role="header"] nav ul > li{ font-weight:800; font-size:42px; display:block}
 
@@ -168,7 +174,7 @@ header[role="header"] nav ul > li > a{ display:block; line-height:72px; color:#4
 
 header[role="header"] nav ul > li:hover a,header[role="header"] nav ul > li.nav-active a{ text-decoration:none; color:#fb5353}
 
-header[role="header"] nav #menu-button {width: 31px;font-size: 0;float: right;height: 19px;position: relative; z-index:70;
+header[role="header"] nav #menu-button {width: 31px;font-size: 0;float: right;height: 19px;position: relative; z-index:9999;
 
 -webkit-transform: rotate(0deg);-moz-transform: rotate(0deg);-o-transform: rotate(0deg);transform: rotate(0deg);-webkit-transition: .5s ease-in-out;-moz-transition: .5s ease-in-out;-o-transition: .5s ease-in-out;transition: .5s ease-in-out;cursor: pointer;}
 
